--- a/main.tex
+++ b/main.tex
@@ -585,7 +585,7 @@ The solution's modular architecture, separating \textbf{prediction}, \textbf{pla
 
 \subsection{Limitations and Future Work}
 
-Limitations include unbounded historical data growth, potential conflicts in optimizations, and limited error handling. Future work could explore more aggressive strategies, such as \textit{task duplication}, support for dynamic fan-outs, richer user control, and interactive dashboards. Broader evaluation (comparing prediction strategies, deploying on commercial FaaS platforms, and testing complex real-world workflows) would further validate the approach and its practical applicability.
+Limitations include unbounded historical data growth, potential conflicts in optimizations, and limited error handling. Future work could explore more aggressive strategies, such as \textit{task duplication}, support for dynamic fan-outs, richer user control, and interactive dashboards. Broader evaluation (comparing prediction strategies, deploying on commercial FaaS platforms, or even on edge computing environments~\cite{cluster-comp-19,comp-nets-22}, and testing complex real-world workflows) would further validate the approach and its practical applicability.
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
