adds references to predictive approaches with complex models

--- a/main.tex
+++ b/main.tex
@@ -594,7 +594,7 @@ The \textbf{Uniform} planner establishes itself as the most cost-effective appro
 
 For use cases prioritizing maximum speed, the \textbf{Non-Uniform} planner provides a distinct advantage over the \textbf{Uniform} planner, consistently delivering the shortest makespan. This performance gain is achieved by leveraging more powerful workers, presenting a clear trade-off between execution time and cost. The impact of our optimizations is most evident with this planner; its optimized version achieves a makespan over \textbf{50\%} shorter while consuming \textbf{45\%} fewer resources than its unoptimized counterpart.
 
-The \textbf{SLA} parameter, specified as a \textbf{percentile}, was also validated as a practical parameter for managing user expectations. Our lightweight, SLA-driven predictions provided reliable results without the computational overhead of complex models, enabling a path toward future dynamic scheduling.
+The \textbf{SLA} parameter, specified as a \textbf{percentile}, was also validated as a practical parameter for managing user expectations. Our lightweight, SLA-driven predictions provided reliable results without the computational overhead of complex models, often used in other solutions~\cite{cose,orion,jolteon,predictiveadaptive}, enabling a path toward future dynamic scheduling.
 
 In summary, this research validates two key findings. First, that predictive optimizations like \textit{pre-loading} and \textit{pre-warming} are critical for mitigating latency and inefficiency in serverless workflows. Second, it presents a practical choice for developers: the \textbf{Uniform} planner for robust and resource-efficient execution, and the \textbf{Non-Uniform} planner for unparalleled performance in time-sensitive applications. Both strategies represent a significant advancement over existing scheduling models.
 
