strengthen the statement of better results because of better balance between data locality and resource contention

--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@ The main contributions of this work are as follows:
 \begin{itemize}
     \item Analysis of the serverless workflow orchestration research landscape;
     \item Propose a decentralized serverless workflow execution engine that overcomes the "one-step scheduling" and uniform-resource limitations of existing workflow-focused solutions by leveraging historical metadata to generate informed execution plans;
-    \item Demonstrate how incorporating historical execution data can improve task allocation, reduce reliance on external cloud storage services, and enhance overall workflow efficiency on FaaS platforms.
+    \item Demonstrate how incorporating historical execution data can be used to improve task allocation (balancing locality and resource contention), reducing reliance on external cloud storage services and enhancing overall workflow efficiency on FaaS platforms.
 \end{itemize}
 
 
@@ -249,7 +249,7 @@ Users can select from three provided planners or implement their own planner by 
     \end{algorithmic}
 \end{algorithm}
 
-Both the \textbf{Uniform} and \textbf{Non-Uniform} planners follow a two-phase approach for task allocation: resource configuration assignment followed by worker ID assignment. The planners differ in their resource allocation strategies. The \textbf{Uniform planner} applies a single, user-specified CPU and memory configuration to all tasks, while the \textbf{Non-Uniform planner} selects the most powerful configuration from the user-specified options for each task. After resource configuration, both planners employ the logic detailed in Algorithm \ref{alg:worker_assignment} (in Appendix) for worker ID assignment. This algorithm implements a balanced clustering strategy with two primary objectives: launch as few new workers as possible while trying not to overload workers; and minimizing network data transfers by co-locating tasks whose outputs are expected to be larger. This clustering approach achieves a \textbf{balance between resource contention and data locality}, contrasting with \textbf{WUKONG}.
+Both the \textbf{Uniform} and \textbf{Non-Uniform} planners follow a two-phase approach for task allocation: resource configuration assignment followed by worker ID assignment. The planners differ in their resource allocation strategies. The \textbf{Uniform planner} applies a single, user-specified CPU and memory configuration to all tasks, while the \textbf{Non-Uniform planner} selects the most powerful configuration from the user-specified options for each task. After resource configuration, both planners employ the logic detailed in Algorithm \ref{alg:worker_assignment} (in Appendix) for worker ID assignment. This algorithm implements a balanced clustering strategy that uses history to try maximizing data locality while avoiding resource contention. It achieves this by launching the minimal number of new workers necessary to maintain efficiency, while avoiding overloading any individual worker with excessive task assignments; and minimizing network data transfers by co-locating tasks whose outputs are expected to be larger. This clustering approach achieves a \textbf{balance between resource contention and data locality}, contrasting with \textbf{WUKONG}.
 
 \begin{algorithm}
     \caption{AssignGroup Procedure}
@@ -596,7 +596,7 @@ For use cases prioritizing maximum speed, the \textbf{Non-Uniform} planner provi
 
 The \textbf{SLA} parameter, specified as a \textbf{percentile}, was also validated as a practical parameter for managing user expectations. Our lightweight, SLA-driven predictions provided reliable results without the computational overhead of complex models, often used in other solutions~\cite{cose,orion,jolteon,predictiveadaptive}, enabling a path toward future dynamic scheduling.
 
-In summary, this research validates two key findings. First, that predictive optimizations like \textit{pre-loading} and \textit{pre-warming} are critical for mitigating latency and inefficiency in serverless workflows. Second, it presents a practical choice for developers: the \textbf{Uniform} planner for robust and resource-efficient execution, and the \textbf{Non-Uniform} planner for unparalleled performance in time-sensitive applications. Both strategies represent a significant advancement over existing scheduling models.
+In summary, this research validates three key findings. First, that predictive optimizations like \textit{pre-loading} and \textit{pre-warming} are critical for mitigating latency and inefficiency in serverless workflows. Second, it presents a practical choice for developers/data scientists: the \textbf{Uniform} planner for robust and resource-efficient execution, and the \textbf{Non-Uniform} planner for unparalleled performance in time-sensitive applications. Both strategies represent a significant advancement over existing scheduling models. Lastly, it shows the importance and positive impact of properly \textbf{balancing resource contention and data locality} in serverless workflows.
 
 % ------------------------------------------------ %
 
@@ -656,7 +656,7 @@ Besides dynamic scheduling, WUKONG employs data locality optimization techniques
 
 These optimizations, combined with WUKONG's decentralized scheduling approach, significantly enhance performance compared to both \textbf{Dask Distributed} and \textbf{PyWren} by minimizing data transfer overhead and eliminating central scheduler bottlenecks. However, WUKONG shares the limitation of supporting only statically defined control structures, requiring workflow DAGs to be known ahead-of-time, similarly to our proposed solution. Additionally, its optimization heuristics can lead to inefficiencies in certain scenarios: \textit{Delayed I/O} may increase makespan and storage usage if dependencies aren't met after retries; fan-in conflicts where multiple tasks produce large objects can result in resource waste depending on upload timing; and fan-out scenarios with small inputs may not justify the overhead of invoking multiple executors as it can make subsequent fan-in's more expensive. Furthermore, WUKONG assumes a homogeneous execution environment, where all workers provide identical resources (e.g., each task is allocated 2 CPU cores and 512 MB of memory), which prevents tailoring resources to tasks with different computational or memory demands.
 
-While WUKONG represents a significant advance in serverless workflow orchestration through its decentralization, its scheduling and optimizations remain limited. The system bases decisions only on the next stage of the workflow (i.e., one-to-one, fan-in, or fan-out transitions). We refer to this as \textit{one-step scheduling}, since it relies solely on information about the next step. Crucially, WUKONG does not exploit the global knowledge of the workflow structure, even though the entire workflow structure is known before execution begins. Also, its optimizations rely on heuristic-based strategies that can lead to suboptimal performance when workflow behavior deviates from expected patterns.
+While WUKONG represents a significant advance in serverless workflow orchestration through its decentralization, its scheduling and optimizations remain limited. The system bases decisions only on the next stage of the workflow (i.e., one-to-one, fan-in, or fan-out transitions). We refer to this as \textit{one-step scheduling}, since it relies solely on information about the next step. Crucially, WUKONG does not exploit the global knowledge of the workflow structure, even though the entire structure is known before execution begins. Consequently, its optimizations rely on fixed, heuristic-based strategies that enforce an extreme trade-off between data locality and resource contention. Optimizations like \textit{Task Clustering} and \textit{Delayed I/O} achieve \textbf{maximum data locality} by having executors hold large objects and prolong execution, but this comes at the cost of \textbf{high resource contention}. Conversely, disabling these optimizations results in \textbf{no resource contention}, leading to \textbf{no data locality}. This highlights the absence of adaptive mechanisms to achieve a \textit{dynamic balance between locality and resource utilization}, resulting in suboptimal performance when workload behavior deviates from expected patterns. With our solution we demonstrated that this dynamic balance is critical to improving scheduling efficiency.
 
 \subsection{Discussion}
 The existing body of related work highlights a clear progression in workflow orchestration strategies, moving from traditional cluster-based frameworks to cloud-native platforms and finally to serverless execution engines. Cluster-based systems such as Hadoop, Spark, Flink, and Dask emphasize fine-grained control, strong data locality, and predictable performance, but they incur significant operational overhead, limited elasticity, and often require technical expertise to deploy and manage. Commercial cloud-native platforms like AWS Step Functions and Azure Durable Functions simplify deployment and management by abstracting state handling and orchestration, but they typically incur additional costs and are bound to vendor-specific ecosystems. Runtime extensions such as Palette, Faa\$T, and Lambdata tackle the core inefficiencies of serverless platforms by enhancing data locality and reducing communication overhead.
